--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -100,7 +100,7 @@
 }
 
 @media (max-width: 767.98px) and (orientation: landscape) {
-  .navigation-menu {
+  .menu--main.navigation-menu {
     background-position: center bottom;
     background-size: 100vw 23vh;
 
